Enhanced GitHub Actions workflow for automated builds and releases

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,9 @@ name: Build and Release
 
 on:
   push:
-    branches: [ main ]
-    tags: [ 'v*' ]
-  pull_request:
-    branches: [ main ]
+    tags:
+      - 'v*'
+  workflow_dispatch:
 
 jobs:
   build-windows:
@@ -16,16 +15,20 @@ jobs:
         with:
           channel: 'stable'
           architecture: x64
-      - run: flutter config --enable-windows-desktop
-      - run: flutter pub get
-      - run: flutter build windows
-      - name: Archive Windows Build
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Install project dependencies
+        run: flutter pub get
+      - name: Build Windows
+        run: flutter build windows --release
+      - name: Create Windows ZIP
+        run: |
+          cd build/windows/runner/Release
+          7z a -tzip ../../../LedgerPro-windows.zip *
+      - name: Upload Windows Build
         uses: actions/upload-artifact@v3
         with:
           name: windows-build
-          path: build/windows/x64/runner/Release/
-          
+          path: build/LedgerPro-windows.zip
+
   build-android:
     runs-on: ubuntu-latest
     steps:
@@ -33,14 +36,15 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: '17'
+          java-version: '11'
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-      - run: flutter pub get
-      - run: flutter build apk --release
-      - name: Archive Android Build
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Install project dependencies
+        run: flutter pub get
+      - name: Build Android APK
+        run: flutter build apk --release
+      - name: Upload Android Build
         uses: actions/upload-artifact@v3
         with:
           name: android-build
@@ -51,11 +55,14 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
-      - uses: actions/download-artifact@v3
+      - uses: actions/checkout@v3
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
         with:
           name: windows-build
           path: windows-build
-      - uses: actions/download-artifact@v3
+      - name: Download android artifacts
+        uses: actions/download-artifact@v3
         with:
           name: android-build
           path: android-build
@@ -63,8 +70,30 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            windows-build/**
-            android-build/**
+            windows-build/LedgerPro-windows.zip
+            android-build/app-release.apk
           draft: true
           prerelease: false
           generate_release_notes: true
+          body: |
+            ## LedgerPro Release ${{ github.ref_name }}
+            
+            ### Features
+            - Modern and intuitive business management interface
+            - Customer and supplier management
+            - Transaction tracking and reporting
+            - Multi-currency support
+            - Dark/Light theme support
+            - Business profile management
+            - PDF report generation
+            
+            ### Installation
+            - Windows: Download and extract LedgerPro-windows.zip
+            - Android: Install the app-release.apk on your device
+            
+            ### Requirements
+            - Windows 10 or later (64-bit)
+            - Android 6.0 or later
+            
+            ### Note
+            This is a release build of LedgerPro. For the best experience, please ensure you're using the latest version.
