--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
     sdk: flutter
   desktop: ^5.1.1
   sqflite: ^2.3.2
-  sqflite_common_ffi: ^2.3.2+1
+  sqflite_common_ffi: ^2.3.3
   crypto: ^3.0.1
   provider: ^6.0.0
   collection: ^1.18.0
@@ -56,7 +56,8 @@ dependencies:
   flutter_svg: ^2.0.9  # For SVG support
   shared_preferences: ^2.2.2
   package_info_plus: ^4.2.0
-  window_manager: ^0.3.8
+  window_manager: ^0.3.9
+  sqlite3: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -65,19 +66,19 @@ dev_dependencies:
   flutter_lints: ^4.0.0
 
 flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/images/accounting.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
-  web:
-    generate: true
-    image_path: "assets/images/accounting.png"
-    background_color: "#hexcode"
-    theme_color: "#hexcode"
   windows:
     generate: true
     image_path: "assets/images/accounting.png"
-    icon_size: 48 # min:48, max:256, default: 48
+    icon_size: 256
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/accounting.png"
+  windows:
+    generate: true
+    image_path: "assets/images/accounting.png"
+    icon_size: 48 # This will generate a Windows icon
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
