feat(inventory): Enhanced purchase order management with receiving functionality
- Added multi-item receive dialog
- Improved purchase order number generation
- Added barcode scanning capability
- Enhanced inventory tracking with batch support
- Added sound feedback for barcode scanning
- Updated UI for better user experience

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   package_info_plus: ^4.2.0
   window_manager: ^0.3.9
   sqlite3: ^2.1.0
+  mobile_scanner: ^3.5.5
+  audioplayers: ^5.2.1  # Add this line for beep sound
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -96,6 +99,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - assets/images/
+    - assets/sounds/
     - assets/images/accounting.png
     - assets/images/chart.png
     - assets/fonts/NotoSans-Regular.ttf
