--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,7 @@
             "username": "admin",
             "password": "3562"
         }
-    ]
+    ],
+    "cmake.ignoreCMakeListsMissing": true,
+    "CodeGPT.apiKey": "CodeGPT Plus Beta"
 }
