--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
-org.gradle.jvmargs=-Xmx4G
-android.useAndroidX=true
-android.enableJetifier=true
+RELEASE_STORE_FILE=ledgerpro.keystore
+RELEASE_KEY_ALIAS=ledgerpro
+RELEASE_STORE_PASSWORD=ledgerpro2024
+RELEASE_KEY_PASSWORD=ledgerpro2024
