fix: CORS and health endpoint issues

--- a/backend/.env
+++ b/backend/.env
@@ -12,7 +12,7 @@ JWT_EXPIRES_IN=30d
 # Razorpay Configuration
 RAZORPAY_KEY_ID=rzp_live_yP4LjlWJgcZSTS
 RAZORPAY_KEY_SECRET=VhmyO61bdNd4pACPdLWUUKBv
-RAZORPAY_WEBHOOK_SECRET=https://rajdipk.github.io/Ledgerpro-Extended/
+RAZORPAY_WEBHOOK_SECRET=https://ledgerpro-backend.onrender.com/api/customers/webhook
 
 # Email Configuration
 SMTP_HOST=smtp.gmail.com
