--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,24 @@
 {
   "name": "ledgerpro-backend",
   "version": "1.0.0",
-  "description": "Backend server for LedgerPro license management and downloads",
+  "description": "Backend server for LedgerPro license management",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "jest",
-    "test:db": "node src/scripts/testConnection.js",
-    "test:razorpay": "node src/scripts/testRazorpay.js",
     "build": "npm install"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
-    "nodemailer": "^6.9.7",
-    "razorpay": "^2.9.5",
-    "winston": "^3.11.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.1",
+    "razorpay": "^2.8.6"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^2.0.22"
   }
 }
