feat: add international phone input with country code dropdown

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,9 +15,9 @@ SMTP_PORT=587
 SMTP_USER=your_email@gmail.com
 SMTP_PASS=your_app_specific_password
 
-# Razorpay Configuration
-RAZORPAY_KEY_ID=your_key_id
-RAZORPAY_KEY_SECRET=your_key_secret
+# Razorpay Configuration (Test Mode)
+RAZORPAY_KEY_ID=rzp_test_your_key_id
+RAZORPAY_KEY_SECRET=your_test_key_secret
 RAZORPAY_WEBHOOK_SECRET=your_webhook_secret
 
 # License Configuration
