--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -16,4 +16,20 @@ jobs:
         env:
           deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
         run: |
-          curl "$deploy_url"
+          echo "Triggering Render deployment..."
+          RESPONSE=$(curl -s "$deploy_url")
+          echo "Deployment triggered. Response: $RESPONSE"
+          
+          # Wait for deployment to complete (optional)
+          echo "Waiting for deployment to complete..."
+          sleep 30
+          
+          # Check if the service is up
+          SERVICE_URL="https://ledgerpro-extended.onrender.com"
+          HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" $SERVICE_URL)
+          
+          if [ $HTTP_STATUS -eq 200 ]; then
+            echo "Deployment successful! Service is responding."
+          else
+            echo "Warning: Service might not be fully deployed yet. Status code: $HTTP_STATUS"
+          fi
