--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'backend/**'
+      - 'docs/**'
 
 jobs:
   deploy:
@@ -16,20 +17,22 @@ jobs:
         env:
           deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
         run: |
+          if [ -z "$deploy_url" ]; then
+            echo "Error: RENDER_DEPLOY_HOOK_URL is not set"
+            exit 1
+          fi
+          
           echo "Triggering Render deployment..."
-          RESPONSE=$(curl -s "$deploy_url")
-          echo "Deployment triggered. Response: $RESPONSE"
+          RESPONSE=$(curl -s -w "\n%{http_code}" "$deploy_url")
+          HTTP_STATUS=$(echo "$RESPONSE" | tail -n1)
+          BODY=$(echo "$RESPONSE" | head -n-1)
           
-          # Wait for deployment to complete (optional)
-          echo "Waiting for deployment to complete..."
-          sleep 30
+          echo "Response body: $BODY"
+          echo "HTTP Status: $HTTP_STATUS"
           
-          # Check if the service is up
-          SERVICE_URL="https://ledgerpro-extended.onrender.com"
-          HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" $SERVICE_URL)
-          
-          if [ $HTTP_STATUS -eq 200 ]; then
-            echo "Deployment successful! Service is responding."
+          if [ "$HTTP_STATUS" -eq 200 ]; then
+            echo "Deployment triggered successfully"
           else
-            echo "Warning: Service might not be fully deployed yet. Status code: $HTTP_STATUS"
+            echo "Failed to trigger deployment. Status: $HTTP_STATUS"
+            exit 1
           fi
