--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "ledgerpro-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Backend server for LedgerPro license management",
+  "description": "",
   "main": "src/index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3",
+    "nodemailer": "^6.9.7",
+    "razorpay": "^2.9.2"
+  },
   "engines": {
     "node": "18.x"
   },
-  "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "build": "npm install"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.6.3",
-    "nodemailer": "^6.9.1",
-    "razorpay": "^2.8.6"
-  },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.0.2"
   }
 }
