--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     env: node
     buildCommand: cd backend && npm install
     startCommand: cd backend && node src/index.js
+    nodeVersion: 18.x
     envVars:
       - key: NODE_ENV
         value: production
