fix: modifications in payment services and Website pricing

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
     "razorpay": "^2.9.2"
   },
   "engines": {
-    "node": "18.x"
+    "node": "18.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
