introduction of admin panel and pricing modifier for website

--- a/backend/.env
+++ b/backend/.env
@@ -23,3 +23,6 @@ SMTP_PASS=your_smtp_password
 # License Configuration
 LICENSE_KEY_SECRET=your_license_key_secret
 DEMO_PERIOD_DAYS=30
+
+# Admin Authentication
+ADMIN_TOKEN=3562
