--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,10 @@ RELEASE_STORE_FILE=ledgerpro.keystore
 RELEASE_KEY_ALIAS=ledgerpro
 RELEASE_STORE_PASSWORD=ledgerpro2024
 RELEASE_KEY_PASSWORD=ledgerpro2024
+
+org.gradle.jvmargs=-Xmx1536M
+android.useAndroidX=true
+android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
