--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bson": "^6.10.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -23,6 +24,6 @@
     "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=16"
   }
 }
