--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "backend",
+  "name": "ledgerpro-backend",
   "version": "1.0.0",
   "description": "",
+  "type": "commonjs",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,18 +13,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bson": "^6.10.2",
+    "bson": "^6.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.9.2",
+    "mongoose": "^8.0.0",
     "nodemailer": "^6.9.7",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=22.0.0"
   }
 }
