fix: local node start issue

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,27 +8,31 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "build": "rm -rf node_modules && npm cache clean --force && npm install"
+    "build": "npm install",
+    "clean": "rm -rf node_modules package-lock.json",
+    "audit:fix": "npm audit fix --force"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bson": "4.7.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "helmet": "^7.1.0",
-    "mongoose": "^8.9.6",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.9.7",
-    "razorpay": "^2.9.2",
-    "ws": "^8.16.0"
+    "bson": "5.5.0",
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
+    "express": "^4.21.2",
+    "helmet": "7.1.0",
+    "mongoose": "^7.8.6",
+    "morgan": "1.10.0",
+    "nodemailer": "^6.10.0",
+    "razorpay": "^2.9.5",
+    "uuid": "9.0.1",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "3.0.2"
   },
   "engines": {
-    "node": ">=18.0.0 <22.0.0"
+    "node": ">=18.0.0 <21.0.0",
+    "npm": ">=8.0.0"
   }
 }
