--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   flutter_local_notifications: ^16.2.0
   url_launcher: ^6.2.4
   timezone: ^0.9.4
+  material_design_icons_flutter: ^7.0.7296
 
 dev_dependencies:
   flutter_test:
